<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share"
        android:title="@string/share_app"
        app:showAsAction="never" />

    <item android:id="@+id/menu_privacyPolicy"
        android:title="@string/privacy_policy"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_whatsapp"
        android:title="@string/whatsapp"
        android:icon="@drawable/w"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_question"
        android:title=""
        android:icon="@drawable/icon"
        app:showAsAction="always"/>

    <item android:id="@+id/contactUs"
        android:title="@string/contact_us"
        android:checked="false"
        app:showAsAction="never"/>

</menu>